SPARK-1790 rename Server to Domain, add File translations

--- a/src/resources/i18n/spark_i18n.properties
+++ b/src/resources/i18n/spark_i18n.properties
@@ -480,7 +480,7 @@ label.room.topic = Room topic
 label.search = Search
 label.search.service = Search service
 label.seconds = Seconds
-label.server = &Server
+label.server = Do&main
 label.server.address = Server address
 label.show = Show:
 label.software = Software
