--- a/src/resources/i18n/spark_i18n_cs.properties
+++ b/src/resources/i18n/spark_i18n_cs.properties
@@ -233,7 +233,7 @@ label.room.name = J&m\u00e9no M\u00edstnosti
 label.room.topic= &T\u00e9ma M\u00edstnosti
 label.password = &Heslo
 label.confirm.password = &Potvrdit Heslo
-label.server = &Server
+label.server = Do&ména
 label.create.account = Vytvo\u0159it \u00fa\u010det
 label.close = Z&av\u0159\u00edt
 label.ok = OK
@@ -618,6 +618,7 @@ title.add.contact = P\u0159idat Kontakt
 title.file.transfer.preferences = Mo\u017enosti P\u0159enosu Souboru
 title.file.transfer = P\u0159enos Souboru
 
+menuitem.connect = Soubor
 menuitem.contacts = Kontakty
 menuitem.actions = Akce
 menuitem.exit = Konec
