--- a/src/resources/i18n/spark_i18n_de.properties
+++ b/src/resources/i18n/spark_i18n_de.properties
@@ -478,7 +478,7 @@ label.room.topic = Raum&thema
 label.search = Suchen
 label.search.service = &Such-Service
 label.seconds = Sekunden
-label.server = &Server
+label.server = Do&main
 label.server.address = &Server-Adresse
 label.show = Zeigen:
 label.software = &Software
