--- a/src/resources/i18n/spark_i18n_es.properties
+++ b/src/resources/i18n/spark_i18n_es.properties
@@ -191,7 +191,7 @@ label.room = &Cuarto
 label.room.name = &Nombre del cuarto
 label.room.topic = &Tema del cuarto
 label.search.service = &Servicio de b\u00fasqueda
-label.server = &Servidor
+label.server = Do&minio
 label.server.address = &Direcci\u00f3n del servidor
 label.show = Mostrar:
 label.software = &Software
@@ -230,6 +230,7 @@ menuitem.change.nickname = Cambiar apodo
 menuitem.change.subject = Cambiar tema
 menuitem.chat = Chat
 menuitem.check.for.updates = Verificar actualizaciones
+menuitem.connect = Archivo
 menuitem.contacts = Contactos
 menuitem.copy.to = Copiar a
 menuitem.create.room = Crear o unirse a una sala de chat
