--- a/src/resources/i18n/spark_i18n_fi.properties
+++ b/src/resources/i18n/spark_i18n_fi.properties
@@ -349,7 +349,7 @@ label.room.name = &Huoneen nimi
 label.room.topic = Puheen&aihe
 label.password = &Salasana
 label.confirm.password = &Varmista salasana
-label.server = &Palvelin
+label.server = Toi&mialueen
 label.create.account = &Tee uusi tili
 label.close = &Sulje
 label.ok = OK
@@ -819,6 +819,7 @@ title.xmpp.registration = XMPP tunnuksen tiedot
 title.appearance.showVCards = Näytä &VCardit yhteystiedoissa
 title.subscription.request = Lisäyspyyntö
 
+menuitem.connect = Tiedosto
 menuitem.contacts = Tuttavat
 menuitem.actions = Toiminnot
 menuitem.exit = Sulje
