--- a/src/resources/i18n/spark_i18n_fr.properties
+++ b/src/resources/i18n/spark_i18n_fr.properties
@@ -258,7 +258,7 @@ label.room = &Salon
 label.room.name = &Nom du Salon
 label.room.topic = &Th\u00E8me
 label.search.service = &Service de Recherche
-label.server = &Serveur
+label.server = Do&maine
 label.server.address = &Adresse du Serveur
 label.show = Montrer:
 label.software = &Logiciel
@@ -325,6 +325,7 @@ menuitem.chat = Conversation
 menuitem.chatframe.option = Options
 menuitem.check.for.updates = Mettre \u00E0 jour
 menuitem.collapse.all.groups = R\u00E9duire tous les groupes
+menuitem.connect = Fichier
 menuitem.contacts = Contacts
 menuitem.copy.to = Copier vers
 menuitem.create.room = Cr\u00E9er ou rejoindre un salon
