--- a/src/resources/i18n/spark_i18n_it.properties
+++ b/src/resources/i18n/spark_i18n_it.properties
@@ -477,7 +477,7 @@ label.room.topic= &Argomento stanza
 label.search = Cerca
 label.search.service = &Servizio di ricerca
 label.seconds = Seconds
-label.server = &Server
+label.server = Do&minio
 label.server.address = &Indirizzo server
 label.show = Show:
 label.software = &Software
