--- a/src/resources/i18n/spark_i18n_lt.properties
+++ b/src/resources/i18n/spark_i18n_lt.properties
@@ -438,7 +438,7 @@ label.room.topic = Kambario pokalbio tema
 label.search = Ie\u0161koti
 label.search.service = &Ie\u0161kos paslauga
 label.seconds = sekund\u0117s
-label.server = &Serveris
+label.server = Do&menas
 label.server.address = &Serverio adresas
 label.show = Rodomos:
 label.software = &Programin\u0117 \u012franga
