--- a/src/resources/i18n/spark_i18n_nl.properties
+++ b/src/resources/i18n/spark_i18n_nl.properties
@@ -205,7 +205,7 @@ label.room = &Ruimte
 label.room.name = &Naam ruimte
 label.room.topic= &Onderwerp
 label.search.service = &Zoek dienst
-label.server = &Server
+label.server = Do&mein
 label.server.address = &Server adres
 label.show = Toon:
 label.software = &Software
@@ -240,6 +240,7 @@ menuitem.change.nickname = Verander alias
 menuitem.change.subject = Onderwerp veranderen
 menuitem.chat = Conversatie
 menuitem.check.for.updates = Controleer op updates
+menuitem.connect = File
 menuitem.contacts = Contacten
 menuitem.dial = Bellen
 menuitem.delete = Verwijderen
