--- a/src/resources/i18n/spark_i18n_pl.properties
+++ b/src/resources/i18n/spark_i18n_pl.properties
@@ -270,7 +270,7 @@ label.room = Pok\u00f3j
 label.room.name = Nazwa pokoju
 label.room.topic = Temat pokoju
 label.search.service = Szukaj us\u0142ug
-label.server = Serwer
+label.server = Do&mena
 label.server.address = Adres serwera
 label.show = Poka\u017c:
 label.software = Komunikator
@@ -331,6 +331,7 @@ menuitem.change.nickname = Zmie\u0144 pseudonim
 menuitem.change.subject = Zmie\u0144 temat
 menuitem.chat = Rozmowa
 menuitem.check.for.updates = Sprawd\u017a aktualizacje
+menuitem.connect = Plik
 menuitem.contacts = Kontakty
 menuitem.copy.to = Kopiuj do
 menuitem.delete = Usu\u0144
