--- a/src/resources/i18n/spark_i18n_pt_BR.properties
+++ b/src/resources/i18n/spark_i18n_pt_BR.properties
@@ -94,7 +94,7 @@ label.room.name = &Nome da Sala
 label.room.topic = &T\u00f3pico da Sala
 label.password = &Senha
 label.confirm.password = &Confirme a senha
-label.server = &Servidor
+label.server = Do&mínio
 label.create.account = Criar &Conta
 label.close = Fe&char
 label.ok = OK
@@ -443,6 +443,7 @@ title.add.contact = Adicionar Contato
 title.new.roster.group = Novo Grupo
 
 menuitem.about = Sobre
+menuitem.connect = Arquivo
 menuitem.contacts = Contatos
 menuitem.actions = A\u00e7\u00f5es
 menuitem.exit = Sair
