--- a/src/resources/i18n/spark_i18n_sv.properties
+++ b/src/resources/i18n/spark_i18n_sv.properties
@@ -234,7 +234,7 @@ label.room.name = &Rummets Namn
 label.room.topic= Rummets &rubrik
 label.password = &Lösenord
 label.confirm.password = &Bekräfta lösenord
-label.server = &Server
+label.server = Do&män
 label.create.konton = Skapa &konto
 label.close = S&täng
 label.ok = OK
@@ -621,6 +621,7 @@ title.add.contact = Lägg till kontakt
 title.file.transfer.preferences = Filöverings inställningar
 title.file.transfer = Fil överföring
 
+menuitem.connect = Fil
 menuitem.contacts = Kontakter
 menuitem.actions = Kommandon
 menuitem.exit = Avsluta
