--- a/src/resources/i18n/spark_i18n_tr.properties
+++ b/src/resources/i18n/spark_i18n_tr.properties
@@ -415,7 +415,7 @@ label.room = &Oda
 label.room.name = O&da ad\u0131
 label.room.topic= Oda &konusu
 label.search.service = &Arama servisi
-label.server = &Sunucu
+label.server = Alan
 label.server.address = &Sunucu adresi
 label.show = G\u00f6ster:
 label.software = &Yaz\u0131l\u0131m
@@ -453,6 +453,7 @@ menuitem.change.nickname = Takma ad de\u011fi\u015ftir
 menuitem.change.subject = Konu de\u011fi\u015ftir
 menuitem.chat = Sohbet
 menuitem.check.for.updates = G\u00fcncellemelere bak
+menuitem.connect = Dosya 
 menuitem.contacts = Ba\u011flant\u0131lar
 menuitem.copy.to = Kopyala
 menuitem.delete = Sil
