--- a/src/resources/i18n/spark_i18n_uk_UA.properties
+++ b/src/resources/i18n/spark_i18n_uk_UA.properties
@@ -477,7 +477,7 @@ label.room.topic = \u0422\u0435\u043C\u0430 \u0433\u0440\u0443\u043F\u0438
 label.search = \u041F\u043E\u0448\u0443\u043A
 label.search.service = \u041F\u043E\u0448\u0443\u043A\u043E\u0432\u0430 \u0441\u043B\u0443\u0436\u0431\u0430
 label.seconds = \u0421\u0435\u043A\u0443\u043D\u0434\u0438
-label.server = &\u0421\u0435\u0440\u0432\u0435\u0440
+label.server = \u0414\u0449&\u043C\u0435\u043D
 label.server.address = \u0410\u0434\u0440\u0435\u0441\u0430 \u0441\u0435\u0440\u0432\u0435\u0440\u0430
 label.show = \u041F\u043E\u043A\u0430\u0437\u0430\u0442\u0438:
 label.software = \u041F\u0440\u043E\u0433\u0440\u0430\u043C\u0430
