--- a/src/resources/i18n/spark_i18n_zh_CN.properties
+++ b/src/resources/i18n/spark_i18n_zh_CN.properties
@@ -470,7 +470,7 @@ label.room.topic = (&T) \u804A\u5929\u5BA4\u9898\u76EE
 label.search = Search
 label.search.service = (&S) \u641C\u7D22\u670D\u52A1
 label.seconds = Seconds
-label.server = (&S) \u670D\u52A1\u5668
+label.server = (&M) \u57DF\u540D
 label.server.address = (&S) \u670D\u52A1\u5668\u5730\u5740
 label.show = \u663E\u793A:
 label.software = (&S) \u8F6F\u4EF6
@@ -530,6 +530,7 @@ menuitem.change.nickname = \u4FEE\u6539\u6635\u79F0
 menuitem.change.subject = \u6539\u53D8\u4E3B\u9898
 menuitem.chat = \u804A\u5929
 menuitem.check.for.updates = \u68C0\u67E5\u66F4\u65B0
+menuitem.connect = \u6587\u4EF6
 menuitem.contacts = \u8054\u7CFB\u4EBA
 menuitem.copy.to = \u590D\u5236\u5230
 menuitem.delete = \u5220\u9664
