--- a/src/resources/i18n/spark_i18n_zh_TW.properties
+++ b/src/resources/i18n/spark_i18n_zh_TW.properties
@@ -429,7 +429,7 @@ label.room.name	=	(&R) \u6703\u8b70\u5ba4\u540d\u7a31
 label.room.topic	=	(&T) \u6703\u8b70\u5ba4\u4e3b\u984c
 label.password	=	(&P) \u5bc6\u78bc
 label.confirm.password	=	(&C) \u78ba\u8a8d\u5bc6\u78bc
-label.server	=	(&S) \u4f3a\u670d\u5668
+label.server	=	(&M) \u57DF\u540D
 label.create.account	=	(&A) \u5efa\u7acb\u65b0\u5e33\u6236
 label.close	=	(&L) \u95DC\u9589
 label.ok	=	\u78BA\u8A8D
@@ -536,6 +536,7 @@ label.add.to.roster = \u65b0\u589e\u806f\u7d61\u4eba\u5230\u540d\u55ae\u4e2d
 label.audio.device = \u97f3\u983b\u8a2d\u5099
 label.video.device = \u8996\u983b\u8a2d\u5099
 
+menuitem.contnect	= \u6587\u4EF6
 menuitem.contacts	=	\u806f\u7d61\u4eba
 menuitem.actions	=	\u6D3B\u52D5
 menuitem.exit	=	\u96e2\u958b
