--- a/src/resources/i18n/spark_i18n_ja.properties
+++ b/src/resources/i18n/spark_i18n_ja.properties
@@ -201,7 +201,7 @@ label.room.name = \u30eb\u30fc\u30e0\u540d
 label.room.topic= \u30eb\u30fc\u30e0\u30c8\u30d4\u30c3\u30af
 label.password = \u30d1\u30b9\u30ef\u30fc\u30c9
 label.confirm.password = \u30d1\u30b9\u30ef\u30fc\u30c9\u78ba\u8a8d
-label.server = \u30b5\u30fc\u30d0\u30fc
+label.server = \u30C9\u30E1\u30A4\u30F3
 label.create.account = \u30a2\u30ab\u30a6\u30f3\u30c8\u3092\u4f5c\u6210
 label.close = \u9589\u3058\u308b
 label.ok = OK
@@ -568,6 +568,7 @@ title.add.contact = \u9023\u7d61\u5148\u3092\u8ffd\u52a0
 title.file.transfer.preferences = \u30d5\u30a1\u30a4\u30eb\u8ee2\u9001\u8a2d\u5b9a
 title.file.transfer = \u30d5\u30a1\u30a4\u30eb\u8ee2\u9001
 
+menuitem.connect = \u30D5\u30A1\u30A4\u30EB
 menuitem.contacts = \u9023\u7d61\u5148
 menuitem.actions = \u30a2\u30af\u30b7\u30e7\u30f3
 menuitem.exit = \u7d42\u4e86
