--- a/src/resources/i18n/spark_i18n_ko.properties
+++ b/src/resources/i18n/spark_i18n_ko.properties
@@ -435,7 +435,7 @@ label.room = \ub300\ud654\ubc29
 label.room.name = \ub300\ud654\ubc29 \uc774\ub984
 label.room.topic= \ud1a0\ub860\uc8fc\uc81c(&T)
 label.search.service = \uac80\uc0c9 \uc11c\ube44\uc2a4(&S)
-label.server = \uc11c\ubc84(&S)
+label.server = \uB3C4\uBA54\uC778
 label.server.address = \uc11c\ubc84 \uc8fc\uc18c(&S)
 label.show = \ubcf4\uae30:
 label.software = \uc18c\ud504\ud2b8\uc6e8\uc5b4
@@ -492,6 +492,7 @@ menuitem.change.nickname = \ubcc4\uba85 \ubcc0\uacbd
 menuitem.change.subject = \uc8fc\uc81c \ubcc0\uacbd
 menuitem.chat = \ub300\ud654
 menuitem.check.for.updates = \uc5c5\ub370\uc774\ud2b8 \uccb4\ud06c
+menuitem.connect = \uD30C\uC77C
 menuitem.contacts = \uce5c\uad6c
 menuitem.copy.to = \ubcf5\uc0ac
 menuitem.delete = \uc0ad\uc81c
