--- a/src/resources/i18n/spark_i18n_ru_RU.properties
+++ b/src/resources/i18n/spark_i18n_ru_RU.properties
@@ -246,7 +246,7 @@ label.room.name = \u041d\u0430\u0437\u0432\u0430\u043d\u0438\u0435 \u043a\u043e\
 label.room.topic= \u0417\u0430\u0433\u043e\u043b\u043e\u0432\u043e\u043a \u043a\u043e\u043c\u043d\u0430\u0442\u044b
 label.password = \u041f\u0430\u0440\u043e\u043b\u044c
 label.confirm.password = \u041f\u043e\u0432\u0442\u043e\u0440 \u043f\u0430\u0440\u043e\u043b\u044f
-label.server = \u0421\u0435\u0440\u0432\u0435\u0440
+label.server = \u0414\u043E&\u043C\u0435\u043D
 label.chatroom.fontsize = \u0420\u0430\u0437\u043c\u0435\u0440 \u0448\u0440\u0438\u0444\u0442\u0430 \u0432 \u0447\u0430\u0442\u0435:
 label.create.account = \u0421\u043e\u0437\u0434\u0430\u0442\u044c \u0443\u0447\u0435\u0442\u043d\u0443\u044e \u0437\u0430\u043f\u0438\u0441\u044c
 label.contactlist.avatarsize = \u0420\u0430\u0437\u043c\u0435\u0440 \u0430\u0432\u0430\u0442\u0430\u0440\u0430 \u0432 \u0441\u043f\u0438\u0441\u043a\u0435 \u043a\u043e\u043d\u0442\u0430\u043a\u0442\u043e\u0432:
@@ -655,6 +655,7 @@ title.subscription.request= \u0417\u0430\u043f\u0440\u043e\u0441 \u0430\u0432\u0
 menuitem.always.on.top = \u0412\u0441\u0435\u0433\u0434\u0430 \u043f\u043e\u0432\u0435\u0440\u0445
 menuitem.bookmarks = \u0417\u0430\u043a\u043b\u0430\u0434\u043a\u0438
 menuitem.languages = \u042f\u0437\u044b\u043a
+menuitem.connect = \u0424\u0430\u0439\u043B
 menuitem.contacts = \u041a\u043e\u043d\u0442\u0430\u043a\u0442\u044b
 menuitem.actions = \u0414\u0435\u0439\u0441\u0442\u0432\u0438\u044f
 menuitem.exit = \u0412\u044b\u0445\u043e\u0434
