--- a/src/resources/i18n/spark_i18n.properties
+++ b/src/resources/i18n/spark_i18n.properties
@@ -724,6 +724,7 @@ message.gateway.password.error = Password needs to be supplied
 message.gateway.nickname.error = Nickname needs to be supplied
 message.general.error = You have lost your connection to the server due to {0}
 message.generic.reconnect.message = You have lost your connection to the server, to login again, click on the reconnect button below
+message.hostname.cert.verification.failed = Hostname certificate verification failed
 message.idle.for = Idle for {0}
 message.image.too.large = This image is too large to use, please specify an image 16k or smaller
 message.invalid.jabber.id = Not a valid Jabber ID
@@ -827,7 +828,7 @@ message.unable.to.retrieve.last.activity = Unable to determine last activity for
 message.unable.to.save.password = Unable to change password, please contact your server admin
 message.unable.to.send.file = You were unable to send the file to {0}
 message.unable.to.use.hostname.as.resource = Unable to use hostname as resource
-message.unrecoverable.error = Invalid username or password
+message.unrecoverable.error = Unknown connection error. Please review the logs for more information
 message.update.room.list = Update room list
 message.updating.cancelled = Updating has been canceled
 message.user.banned = {0} has been banned from this room. Reason: {1}
@@ -1122,3 +1123,4 @@ action.viewlog=View Log
 dialog.confirm.to.reveal.visibility.title=Are you sure?
 dialog.confirm.to.reveal.visibility.msg=If you are going to proceed your invisibility will be revealed
 dialog.confirm.close.all.conferences.if.invisible.msg=If you want to proceed all conference room will be closed
+
