--- a/src/resources/i18n/spark_i18n.properties
+++ b/src/resources/i18n/spark_i18n.properties
@@ -657,6 +657,7 @@ message.buzz.sent = Requested users attention
 message.calling = Calling {0}
 message.came.online = {0} is online at {1}
 message.cannot.add.contact.to.shared.group = You cannot add new contacts to a shared group
+message.cert.verification.failed = Unable to verify certificate
 message.chat.session.ended = Chat session has ended on {0}
 message.click.to.open = Click to open
 message.client.information = Client information for {0}
