SPARK-1786 additional translations and wording fix

--- a/src/resources/i18n/spark_i18n.properties
+++ b/src/resources/i18n/spark_i18n.properties
@@ -657,6 +657,7 @@ message.buzz.sent = Requested users attention
 message.calling = Calling {0}
 message.came.online = {0} is online at {1}
 message.cannot.add.contact.to.shared.group = You cannot add new contacts to a shared group
+message.cert.hostname.verification.failed = Certificate hostname verification failed
 message.cert.verification.failed = Unable to verify certificate
 message.chat.session.ended = Chat session has ended on {0}
 message.click.to.open = Click to open
@@ -725,7 +726,6 @@ message.gateway.password.error = Password needs to be supplied
 message.gateway.nickname.error = Nickname needs to be supplied
 message.general.error = You have lost your connection to the server due to {0}
 message.generic.reconnect.message = You have lost your connection to the server, to login again, click on the reconnect button below
-message.hostname.cert.verification.failed = Hostname certificate verification failed
 message.idle.for = Idle for {0}
 message.image.too.large = This image is too large to use, please specify an image 16k or smaller
 message.invalid.jabber.id = Not a valid Jabber ID
@@ -829,7 +829,7 @@ message.unable.to.retrieve.last.activity = Unable to determine last activity for
 message.unable.to.save.password = Unable to change password, please contact your server admin
 message.unable.to.send.file = You were unable to send the file to {0}
 message.unable.to.use.hostname.as.resource = Unable to use hostname as resource
-message.unrecoverable.error = Unknown connection error. Please review the logs for more information
+message.unrecoverable.error = Unknown connection error. Please review the logs for more information.
 message.update.room.list = Update room list
 message.updating.cancelled = Updating has been canceled
 message.user.banned = {0} has been banned from this room. Reason: {1}
