SPARK-1788 update to Italian translation (from nicoben)

--- a/src/plugins/sip/src/java/org/jivesoftware/spark/plugin/phone/resource/sip_spark_i18n_it.properties
+++ b/src/plugins/sip/src/java/org/jivesoftware/spark/plugin/phone/resource/sip_spark_i18n_it.properties
@@ -26,90 +26,90 @@
 ## quote the "{" (curly brace) if necessary. A real single quote is represented by ''.
 ##
 
-phone.starting = Starting Phone...
-phone.failed = Failed to start phone
-phone.tryagain = Try again
-phone.call = Call
-phone.voicemail = Voice Mail
-phone.viewcallhistory = View Call History
-phone.placecall = Place phone call.
-phone.hangup = End Call
-phone.tips.hangup = Hang up phone conversation
-phone.home = Home
-phone.work = Work
-phone.cell = Cell
-phone.currentcall = Current Call
-phone.incomingcall = Incoming Call
-phone.noprevious = No previous conversations.
-phone.callended = Call Ended
-phone.transferto = Call transferred to
-phone.connected = Connected
-phone.lastcalled = Last called
-phone.never = Never
-phone.duration = Duration
-phone.accept = Accept
-phone.reject = Reject
-phone.callback = Call Back
-phone.delete = Delete
-phone.enternumber = Enter a number to call.
-phone.invalidnumber = Invalid Number
-phone.outgoingcall = Outgoing call to
-phone.callhistory = Call History
-phone.dialed = Dialed
-phone.dialedcalls = Dialed Calls
-phone.received = Received
-phone.receivedcalls = Received Calls
-phone.missed = Missed
-phone.missedcalls = Missed Calls
-phone.unknown = Unknown
-phone.placecallto = Placed call to
-phone.receivedcallfrom = Received Call from
-phone.missedcallfrom = Missed call from
-phone.incomingcallfrom = Incoming call from
-phone.contactdetails = Contact Details
-phone.noinfo = No Information Available
-phone.viewfullprofile = View Full Profile
-phone.tips.mute = Mute this call
-phone.mute = Mute
-phone.unmute = Unmute
-phone.tips.hold = Place this call on Hold
-phone.hold = Hold
-phone.onhold = On Hold
-phone.time = Time
-phone.tips.transfer = Transfer this call
-phone.transfer = Transfer
-phone.transferring = Transferring
-phone.transfered = Transfered
-phone.callstartedat = Call Started at
-phone.callendedat = Call Ended at
-phone.onphonewith = On the phone with
-phone.callendedwith = Call ended with
-phone.previousconversations = Previous Conversations
-phone.closeconfirm = Closing this room will end the call. Continue?
-phone.confirmation = Confirmation
-phone.all = All
-phone.allcalls = All Calls
-phone.tocall = Call
-btn.add  	= Add
-btn.edit 	= Edit
-btn.del  	= Delete
-btn.dial	= Call
-book.name 	= Name
-book.number = Number
-frame.title	= Phonebook
-book.search = Search
-btn.ok      = OK
-btn.cancel  = Cancel
-frame.add 	= "Add Entry"
-frame.edit 	= "Edit Entry"
-book.exists		= "The phonebook-entry you wish to add is already existing."
-book.noEntry	= "No Entry Selected!"
-book.fillFields = "Please fill all Fields"
-book.warning	= "Attention"
-title.sip.codecs.title = Codecs
-codecs.select 	= < Select
-codecs.unselect = Unselect >
-codecs.up		= Up ^
-codecs.down		= Down v
-codecs.audio.selected	= Selected Audio Codecs
-codecs.audio.avail		= Available Audio Codecs
+phone.starting = Avvio del telefono...
+phone.failed = Errore di avvio del telefono
+phone.tryagain = Riprova
+phone.call = Chiama
+phone.voicemail = Mail vocale
+phone.viewcallhistory = Vedi storico chiamate
+phone.placecall = Esegui la chiamata.
+phone.hangup = Fine chiamata
+phone.tips.hangup = Riagganciare la chiamata.
+phone.home = Casa
+phone.work = Lavoro
+phone.cell = Cellulare
+phone.currentcall = Chiamata in corso
+phone.incomingcall = Chiamata entrante
+phone.noprevious = Nessuna conversazione precedente.
+phone.callended = Chiamata terminata
+phone.transferto = Chiamata trasferita
+phone.connected = Connesso
+phone.lastcalled = Ultime chiamate
+phone.never = Mai
+phone.duration = Durata
+phone.accept = Accetta
+phone.reject = Rifiuta
+phone.callback = Richiama
+phone.delete = Cancella
+phone.enternumber = Inserisci il numero da chiamare.
+phone.invalidnumber = Numero invalido
+phone.outgoingcall = Chimata in uscita verso
+phone.callhistory = Storico chiamate
+phone.dialed = Chiamato
+phone.dialedcalls = Chiamate eseguite
+phone.received = Ricevuto
+phone.receivedcalls = Chiamate ricevute
+phone.missed = Perso
+phone.missedcalls = Chiamate perse
+phone.unknown = Sconosciuto
+phone.placecallto = Esegui chiamata a
+phone.receivedcallfrom = Chiamata ricevuta da
+phone.missedcallfrom = Chiamata persa da
+phone.incomingcallfrom = Chiamata entrante da
+phone.contactdetails = Dettagli contatto
+phone.noinfo = Nessuna informazione disponibile
+phone.viewfullprofile = Vedi profilo completo
+phone.tips.mute = Silenzia la chiamata
+phone.mute = Silenzio
+phone.unmute = Attiva
+phone.tips.hold = Metti la chiamata in attesa
+phone.hold = Attesa
+phone.onhold = In attesa
+phone.time = Tempo
+phone.tips.transfer = Trasferimento chiamata
+phone.transfer = Trasferisci
+phone.transferring = Trasferimento
+phone.transfered = Trasferita
+phone.callstartedat = Chiamata iniziata alle
+phone.callendedat = Chiamata terminata alle
+phone.onphonewith = Al telefono con
+phone.callendedwith = Chiamata terminata con
+phone.previousconversations = Precedenti conversazioni
+phone.closeconfirm = La chiusura della stanza terminerà la chiamata. Prosegui?
+phone.confirmation = Conferma
+phone.all = Tutto
+phone.allcalls = Tutte le chiamate
+phone.tocall = Chiama
+btn.add = Aggiungi
+btn.edit = Modifica
+btn.del = Cancella
+btn.dial = Chiama
+book.name = Nome
+book.number = Numero
+frame.title = Rubrica
+book.search = Cerca
+btn.ok = OK
+btn.cancel = Cancella
+frame.add = "Aggiungi voce"
+frame.edit = "Modifica voce"
+book.exists = "La voce che vuoi inserire, esiste gi\u00e0."
+book.noEntry = "Nessuna voce selezionata!"
+book.fillFields = "Prego inserire tutti i campi"
+book.warning	= "Attenzione"
+title.sip.codecs.title = Codecs		= Available Audio Codecs
+codecs.select 	= < Seleziona
+codecs.unselect = Deseleziona >
+codecs.up = Su ^
+codecs.down = Gi\u00f9 v
+codecs.audio.selected = Codecs Audio selezionati
+codecs.audio.avail = Codecs Audio disponibili
