--- a/src/resources/i18n/spark_i18n_it.properties
+++ b/src/resources/i18n/spark_i18n_it.properties
@@ -400,7 +400,7 @@ group.chat.name.notification = Visto il tuo nome...
 group.chat.name.match = Il tuo nome è stato citato in una chat:
 
 label.accounts = &Accounts
-label.home = Home
+label.home = Casa
 label.add.conference.service = &Aggiungi un servizio conferenza
 label.add.jid = &Aggiungi JID
 label.add.task = &Aggiungi impegno
@@ -408,7 +408,7 @@ label.auto.login = &Login Automatico
 label.available.users.in.roster =   &Utenti disponibili in Elenco
 label.avatar = Avatar:
 label.cancel = Annulla
-label.cell = Cell
+label.cell = Cellulare
 label.change.password.to = &Cambia Password
 label.chatroom.fontsize = Dimensione font finestra chat:
 label.city = &Localit\u00e0
@@ -460,7 +460,7 @@ label.old.ssl = &Usa vecchio metodo su porta SSL
 label.os = &Sistema Operativo
 label.pager = &Cercapersone
 label.password = &Password
-label.passwordreset = Reset password
+label.passwordreset = Reimposta password
 label.phone = &Telefono
 label.port = &Porta
 label.postal.code = &CAP
@@ -476,10 +476,10 @@ label.room.name = &Nome stanza
 label.room.topic= &Argomento stanza
 label.search = Cerca
 label.search.service = &Servizio di ricerca
-label.seconds = Seconds
+label.seconds = Secondi
 label.server = Do&minio
 label.server.address = &Indirizzo server
-label.show = Show:
+label.show = Mostra:
 label.software = &Software
 label.state.and.province = &Regione
 label.street.address = &Via
@@ -613,7 +613,7 @@ menuitem.view.last.activity = Visualizza l'ultima Attivit\u00e0
 menuitem.view.logs = Visualizza Logs
 menuitem.view.profile = Visualizza Profilo
 menuitem.view.room.info = Visualizza Informazioni sulla Stanza
-menuitem.voice = Voice
+menuitem.voice = Voce
 menuitem.show.offline.users = Mostra utenti offline
 menuitem.show.contact.statusmessage = Mostra messaggio di stato
 menuitem.bookmark.room = Memorizza stanza
@@ -949,7 +949,7 @@ title.dial.phone = Chiama numero
 title.disable.transport = Disabilita trasporto
 title.download.complete = Download completato
 title.downloading.im.client = Download IM client
-title.downloads = Downloads
+title.downloads = Download
 title.edit.custom.message = Modifica Messaggi Personalizzati
 title.edit.profile = Modifica le Informazioni del profilo
 title.enter.reason = Inserisci Motivazione
@@ -959,7 +959,7 @@ title.error.delete.file = Impossibile cancellare file
 title.error.find.app = Impossibile trovare l''applicazione corrispondente
 title.error.rename.file = Impossibile rinominare file
 title.file = File
-title.filesize = Size
+title.filesize = Dimensione
 title.file.exists = Il File esiste
 title.file.transfer = Trasferimento file
 title.file.transfer.preferences = Preferenze di trasferimento file
@@ -1017,7 +1017,7 @@ title.rename.roster.group = Rinomina l''elenco
 title.room.destroyed = Stanza eliminata
 title.room.information = Informazioni stanza
 title.roster = Elenco
-title.select.file.to.send = Seleziona i(l) file da inviare
+title.select.file.to.send = Seleziona il/i file da inviare
 title.set.status.message = Imposta messaggi di stato
 title.simple.registration = Credenziali account SIMPLE
 title.sound.preferences = Preferenze suoni
@@ -1057,7 +1057,7 @@ tree.conference.services = Servizi conferenza
 tree.users.in.room = Utenti nella stanza
 
 
-lookandfeel.select = Seleziona Look & Feel
+lookandfeel.select = Seleziona aspetto
 lookandfeel.change.now = Cambia ora
 lookandfeel.tooltip.restart.no = Non \u00e8 necessario alcun riavvio
 lookandfeel.tooltip.restart.yes = Per passare al nuovo stile premere Salva e riavviare Spark
@@ -1074,8 +1074,8 @@ lookandfeel.color.saved = Colore salvato
 privacy.title.preferences = Impostazioni di privacy di Spark
 privacy.title.panel = Utilizza il tasto destro del mouse
 privacy.label.iq.desc = Query
-privacy.label.pin.desc = Presence in
-privacy.label.pout.desc = Presence out
+privacy.label.pin.desc = Presenza dentro
+privacy.label.pout.desc = Presenza fuori
 privacy.label.msg.desc = Messaggi
 privacy.border.information = Informazioni sulla privacy
 privacy.label.information = Utilizza il tasto destro del mouse per aggiungere o cancellare liste od oggetti
