--- a/src/plugins/roar/src/resources/i18n/roar_i18n_pl.properties
+++ b/src/plugins/roar/src/resources/i18n/roar_i18n_pl.properties
@@ -1,5 +1,5 @@
 
-# Plik jêzykowy Panelu ROAR
+# Plik jezykowy Panelu ROAR
 
 roar.settings = Ustawienia ROAR
 roar.enabled = W\u0142\u0105cz wyskakuj\u0105ce powiadomienia
@@ -9,6 +9,28 @@ roar.location = Zmiana miejsca wyskakuj\u0105cych powiadomie\u0144 (wymagany res
 roar.display.topright = G\u00F3rna prawa
 roar.display.bottomright = Dolna prawa
 roar.background = Kolor t\u0142a
+roar.background.group = Kolor t\u0142a multi u\u017cytkownika
+roar.background.keyword = Kolor t\u0142a s\u0142\u00f3w kluczowych
 roar.header = Kolor nag\u0142\u00F3wka
+roar.header.group = Kolor nag\u0142\u00F3wka multi u\u017cytkownika
+roar.header.keyword = Kolor nag\u0142\u00F3wka s\u0142\u00f3w kluczowych
 roar.text = Kolor tekstu
+roar.text.group = Kolor tekstu multi u\u017cytkownika
+roar.text.keyword = Kolor tekstu s\u0142\u00f3w kluczowych
 
+roar.single = Pojedynczy U\u017cytkownik
+roar.single.disable = Wy\u0142\u0105cz Roar dla czat\u00f3w pojedynczego u\u017cytkownika
+roar.group = Multi U\u017cytkownik
+roar.group.different = U\u017cywaj r\u00f3\u017cnych ustawie\u0144 dla czat\u00f3w multi u\u017cytkownika
+roar.group.disable = Wy\u0142\u0105cz Roar dla czat\u00f3w multi u\u017cytkownika
+roar.keyword = Dopasowanie s\u0142\u00f3w kluczowych
+roar.keyword.different = U\u017cywaj r\u00f3\u017cnych ustawie\u0144 dla dopasowania s\u0142\u00f3w kluczowych
+roar.keyword.keyword = S\u0142owa kluczowe (oddzielone przecinkami)
+
+roar.display.system = Powiadomienia systemu operacyjnego
+
+roar.warning.topright = Niestandardowe style powiadamiania. W pe\u0142ni konfigurowalne.
+roar.warning.bottomright = Niestandardowe style powiadamiania. W pe\u0142ni konfigurowalne.
+roar.warning.toaster = Style powiadamiania Sparka. Kolory <u>nie s\u0105</u> konfigurowalne.
+roar.warning.system = Powiadamiania zale\u017cne od systemu. Kolory i czas trwania <u>nie s\u0105</u> konfigurowalne.
+roar.warning.system.mac = U\u017cywanie Centrum Powiadamiania (OSX 10.8 i powy\u017cej). <br>Kolory i czas trwania <u>nie s\u0105</u> konfigurowalne.<br>Zobacz ustawienia systemu Mac -&gt; Notifications for more settings.
