--- a/src/plugins/transferguard/src/resources/i18n/transferguard_i18n_pl.properties
+++ b/src/plugins/transferguard/src/resources/i18n/transferguard_i18n_pl.properties
@@ -41,6 +41,7 @@
 ##      Added key: 'guard.settings.title.settings'
 ##
 
+guard.settings.title.list = Stra\u017cnik transferu plik\u00f3w
 guard.settings.title.settings = Ustawienia transferu plik\u00F3w
 guard.settings.tooltips.blockedtypes = Wpisz rozszerzenia plik\u00F3w, kt\u00F3rych przesy\u0142 chcesz blokowa\u0107 (np. '*.doc'), oddzielaj\u0105c je przecinkami
 guard.settings.tooltips.blockedperson = Wpisz identyfikator JID u\u017Cytkownik\u00F3w, od kt\u00F3rych chcesz blokowa\u0107 przesy\u0142 plik\u00F3w, oddzielaj\u0105c je przecinkami
