Italian translation, sorted some english entries

--- a/src/resources/i18n/spark_i18n_it.properties
+++ b/src/resources/i18n/spark_i18n_it.properties
@@ -379,6 +379,8 @@ checkbox.transport.tab.setting = Mostra trasporti disponibili nel tab (Richiede 
 checkbox.conference.tab.setting = Mostra servizio di conferenza nel tab (Richiede il riavvio di Spark)
 checkbox.use.hostname.as.resource = Usa hostname come risorsa
 checkbox.use.version.as.resource = Usa versione di Spark come risorsa
+checkbox.accept.all.certificates = Accetta tutti i certificati (self-signed/expired/not trusted)
+checkbox.disable.hostname.verification = Disabilita la verifica dell'hostname del certificato (non consigliato)
 
 delete.log.permanently = Elimina definitivamente log
 delete.permanently = Eliminare definitivamente?
@@ -399,8 +401,9 @@ group.search.results = Risultati della ricerca
 group.chat.name.notification = Visto il tuo nome...
 group.chat.name.match = Il tuo nome è stato citato in una chat:
 
-label.accounts = &Accounts
+label.na = n/a
 label.home = Casa
+label.accounts = &Accounts
 label.add.conference.service = &Aggiungi un servizio conferenza
 label.add.jid = &Aggiungi JID
 label.add.task = &Aggiungi impegno
@@ -449,7 +452,6 @@ label.message.style = &Stile Messaggi
 label.middle.name = &Secondo Nome
 label.minutes.before.stale.chat = &Minuti di inattivit\u00e0 massima per la stanza
 label.mobile = &Cellulare
-label.na = n/a
 label.name = &Nome
 label.network = Ret&e
 label.new.nickname = Nuovo nickname
@@ -654,6 +656,8 @@ message.buzz.sent = Invia una notifica all'utente.
 message.calling = Chiamata a {0} in corso
 message.came.online = {0} \u00e8 online dalle {1}
 message.cannot.add.contact.to.shared.group = Impossibile aggiungere nuovi contatti ad un gruppo condiviso.
+message.cert.hostname.verification.failed = Verifica del certificato dell'hostname fallita
+message.cert.verification.failed = Impossibile verificare il certificato
 message.chat.session.ended = La sessione di chat \u00e8 terminata alle {0}
 message.click.to.open = Fai click per aprire
 message.client.information = Informazioni sul client di {0}
@@ -727,6 +731,7 @@ message.invalid.jabber.id = Il Jabber ID indicato non \u00e8 valido
 message.invalid.jid.error = Il JID indicato non \u00e8 valido.
 message.invalid.status = Digita un messaggio di stato valido.
 message.invalid.username.password = Username o password non validi.
+message.invite.to.groupchat = {0} ti sta invitando ad unirti alla chat
 message.invite.users.to.conference = Invita gli utenti ad una conferenza.
 message.is.shared.group = {0} \u00e8 un gruppo condiviso.
 message.is.typing.a.message = {0} sta digitando un messaggio...
@@ -743,6 +748,7 @@ message.negotiation.file.transfer = Negoziazione del file transfer con {0} in co
 message.new.message = Nuovo messaggio da {0}.
 message.new.spark.available = {0} \u00e8 ora disponibile. Vuoi procedere con l''installazione?
 message.nickname.in.use = Nickname gi\u00e0 in uso. Indicane un altro.
+message.nickname.not.acceptable = Il cambio del nickname non \u00e8 abilitato!
 message.no.avatar.found = L'utente non ha configurato nessun avatar.
 message.no.caller.id = Identificativo del chiamante non disponibile.
 message.no.description.available = Nessuna descrizione disponibile
@@ -969,6 +975,7 @@ title.gadugadu.registration = Credenziali account GaduGadu
 title.general.media = Impostazioni media
 title.general.chat.settings = Impostazioni generali per la chat
 title.group.chat = Chat di gruppo
+title.group.chat.settings = Impostazioni chat di gruppo
 title.gtalk.registration = Credenziali account GTalk
 title.history.for = Cronologia delle conversazioni per {0}
 title.icq.registration = Credenziali account ICQ
@@ -1002,8 +1009,8 @@ title.notifications = Notifiche
 title.occupants = Presenti
 title.on.the.phone = Al Telefono
 title.password = Password
-title.passwords.no.match = Conferma passwords.
 title.password.required = Richiesta una password
+title.passwords.no.match = Conferma passwords.
 title.person.search = Ricerca Persona
 title.plugins = Plugins
 title.preferences = Preferenze
@@ -1040,7 +1047,6 @@ title.yahoo.registration = Credenziali Account Yahoo
 title.appearance.showVCards = Mostra &VCards nella lista dei contatti
 title.subscription.request = Richiesta di sottoscrizione
 
-
 tooltip.place.a.call = Effettua una chiamata questa persona
 tooltip.appearance = Modifica l'aspetto di Spark
 tooltip.file.transfer = Impostazioni trasferimento file
@@ -1052,10 +1058,8 @@ tooltip.view.changelog = Visualizza il ChangeLog
 tooltip.view.history = Visualizza lo storico delle conversazioni
 tooltip.view.readme = Visualizza ReadMe
 
-
 tree.conference.services = Servizi conferenza
 tree.users.in.room = Utenti nella stanza
-
 
 lookandfeel.select = Seleziona aspetto
 lookandfeel.change.now = Cambia ora
@@ -1067,7 +1071,6 @@ lookandfeel.color.green = Verde
 lookandfeel.color.blue = Blu
 lookandfeel.color.opacity = Opacit\u00e0
 lookandfeel.color.saved = Colore salvato
-
 
 
 ##Settings for the privacy plugin
@@ -1115,7 +1118,6 @@ paused = {0} ha smesso di digitare
 active = {0} sta prestando attenzione
 inactive = {0} sta facendo altro
 gone = {0} sta facendo altro
-
 
 #!#
 action.viewlog=Vedi log
