init commit SPARK-1825

--- a/src/resources/i18n/spark_i18n.properties
+++ b/src/resources/i18n/spark_i18n.properties
@@ -927,6 +927,7 @@ title.appearance.preferences = Customization
 title.available.transports = Available transports
 title.bookmarks = Bookmarks
 title.broadcast.message = Broadcast message
+title.broadcast.history = Broadcast history
 title.browse.conference.services = Browse conference services
 title.browse.room.service = Browse conference rooms - {0}
 title.cancelled = Cancelled
