SPARK-1825 add Lithuanian translation

--- a/src/resources/i18n/spark_i18n_lt.properties
+++ b/src/resources/i18n/spark_i18n_lt.properties
@@ -877,6 +877,7 @@ title.appearance = I\u0161vaizda
 title.appearance.preferences = Adaptavimas
 title.available.transports = Galimi ry\u0161io kanalai
 title.broadcast.message = Transliuoti \u017eini\u0105
+title.broadcast.history = Transliacij\u0173 istorija
 title.browse.conference.services = Konferencij\u0173 per\u017ei\u016bra
 title.browse.room.service = Pokalbi\u0173 kambari\u0173 per\u017ei\u016bra - {0}
 title.cancelled = At\u0161aukta
