Broadcast history window should have a title, can use the same i18n

--- a/src/resources/i18n/spark_i18n.properties
+++ b/src/resources/i18n/spark_i18n.properties
@@ -906,7 +906,7 @@ tab.personal = Personal
 tab.proxy = Proxy
 tab.sso = SSO
 tab.pki = PKI
-
+title.broadcast_history=Broadcast history
 title.about = About
 title.advanced.connection.preferences = Advanced connection preferences
 title.account.create.registration = Account registration
