SPARK-1825 additional changes

--- a/src/resources/i18n/spark_i18n.properties
+++ b/src/resources/i18n/spark_i18n.properties
@@ -410,6 +410,7 @@ label.add.task = Add task
 label.auto.login = Auto login
 label.available.users.in.roster = Available users in roster
 label.avatar = Avatar:
+label.broadcast.history.search.date = Search date (year-month):
 label.cancel = Cancel
 label.cell = Cell
 label.change.password.to = Change &password to
@@ -906,7 +907,6 @@ tab.personal = Personal
 tab.proxy = Proxy
 tab.sso = SSO
 tab.pki = PKI
-title.broadcast_history=Broadcast history
 title.about = About
 title.advanced.connection.preferences = Advanced connection preferences
 title.account.create.registration = Account registration
