--- a/src/resources/i18n/spark_i18n_lt.properties
+++ b/src/resources/i18n/spark_i18n_lt.properties
@@ -275,7 +275,7 @@ button.remove.bookmark = Pa\u0161alinti \u017eym\u0105
 button.roster = &S\u0105ra\u0161as
 button.save = \u012e&ra\u0161yti
 button.save.for.future.use = \u012era\u0161yti paskesniam &naudojimui
-button.search = &Ie\u0161koti
+button.search = Ie\u0161koti
 button.send = Si\u0173sti
 button.send.email = Pa\u0161tas
 button.start.chat = Pokalbis
@@ -370,6 +370,7 @@ label.add.task = Pridedama u\u017eduotis
 label.auto.login = &Automatinis prisijungimas
 label.available.users.in.roster =   &Galimi partneriai visame s\u0105ra\u0161e
 label.avatar = Pseudoportretas:
+label.broadcast.history.search.date = Paie\u0161kos data (metai-m\u0117n):
 label.cancel = At\u0161aukti
 label.change.password.to = \u012er&a\u0161ykite nauj\u0105 slapta\u017eod\u012f
 label.chatroom.fontsize = Pokalbi\u0173 kambario \u0161riftas:
