--- a/src/resources/i18n/spark_i18n.properties
+++ b/src/resources/i18n/spark_i18n.properties
@@ -334,6 +334,7 @@ checkbox.allow.buzz = Allow users to &buzz you
 checkbox.auto.discover.port = Automatically discover host and port
 checkbox.auto.login = &Auto login
 checkbox.login.as.invisible = L&ogin as invisible
+checkbox.login.anonymously = Login anony&mously
 checkbox.disable.chat.history = &Disable chat history
 checkbox.sort.asc.history = Sort messages in contact history by date ascending
 checkbox.disable.prev.chat.history = Disable &showing previous conversation in chat
