SPARK-1852 add Lithuanian translation

--- a/src/resources/i18n/spark_i18n_lt.properties
+++ b/src/resources/i18n/spark_i18n_lt.properties
@@ -292,6 +292,7 @@ checkbox.allow.buzz = &Leisti pa\u0161nekovams purtyti j\u016bs\u0173 pokalbio l
 checkbox.auto.discover.port = &Automatinis serverio ir jo prievado aptikimas
 checkbox.auto.login = A&utomati\u0161kai prisijungti
 checkbox.login.as.invisible = &Prisijungti nematomam
+checkbox.login.anonymously = Prisijungti anoni&mi\u0161kai
 checkbox.disable.chat.history = I\u0161j&ungti pokalbi\u0173 \u017eurnal\u0105
 checkbox.sort.asc.history = R\u016b\u0161iuo&ti \u017einutes kontakto istorijoje datos did\u0117jimo tvarka
 checkbox.disable.prev.chat.history = &I\u0161jungti ankstesni\u0173 pokalbi\u0173 rodym\u0105
