SPARK-1864 add translation for MUC dialogs

--- a/src/resources/i18n/spark_i18n.properties
+++ b/src/resources/i18n/spark_i18n.properties
@@ -675,7 +675,7 @@ message.connection.failed = Unable to connect to {0}
 message.create.account = Account could not be created
 message.create.or.join.room = Create or join a conference chat room
 message.current.status = Let others know your current status or activity
-message.default.error = An error has been detected. Please report to support@jivesoftware.com
+message.default.error = An error has been detected
 message.delete.all.history = Delete all previous conversations?
 message.delete.confirmation = Are you sure you want to delete {0}?
 message.disable.transport = Remove login information from {0}?
@@ -707,6 +707,14 @@ message.enter.valid.jid = Enter a valid Jabber ID
 message.enter.xmpp = Enter your XMPP username and password below
 message.enter.yahoo = Enter your username and password to connect to Yahoo
 message.error.during.file.transfer = There was an error during file transfer
+message.error.must.use.reserved.nick = You must use your reserved room nick.
+message.error.nickname.in.use = Your desired nickname is in use or reserved by someone else.
+message.error.no.permission.create.room = You do not have permission to create a room.
+message.error.no.response = No response from server.
+message.error.not.member = You are not a member of this room.\nThis room requires you to be a member to join.
+message.error.room.not.exist = The room you are trying to enter does not exist.
+message.error.room.password.incorrect = The password did not match the room's password.
+message.error.unable.join.room = Unable to join the room.
 message.file.exists.question = The file already exists, overwrite?
 message.file.size = File Size: {0}
 message.file.transfer.canceled = You have canceled the file transfer
