--- a/src/resources/i18n/spark_i18n_lt.properties
+++ b/src/resources/i18n/spark_i18n_lt.properties
@@ -634,7 +634,7 @@ message.connection.failed = Nepavyko prisijungti prie: {0}.
 message.create.account = Paskyros sukurti nepavyko.
 message.create.or.join.room = Sukurti arba prisijungti prie konferencij\u0173 kambario.
 message.current.status = \u010cia galima kitus informuoti apie atsijungimo prie\u017eastis.
-message.default.error = \u012evyko programos klaida. Pra\u0161om apie tai angli\u0161kai prane\u0161ti adresu support@jivesoftware.com.
+message.default.error = \u012evyko programos klaida.
 message.delete.all.history = Ar pa\u0161alinti visus ankstesnius pokalbius?
 message.delete.confirmation = Ar tikrai norite pa\u0161alinti {0}?
 message.disable.transport = Ar pa\u0161alinti prisijungimo prie {0} informacij\u0105?
@@ -660,12 +660,20 @@ message.enter.message.to.broadcast = \u012eveskite \u017eini\u0105, kuri\u0105 t
 message.enter.msn = \u017demiau \u012fveskite \u201eMSN\u201c tinklo abonento vard\u0105 ir slapta\u017eod\u012f.
 message.enter.new.subject = \u012eveskite nauj\u0105 tem\u0105
 message.enter.qq = \u017demiau \u012fveskite \u201eQQ\u201c tinklo numer\u012f.
-message.enter.room.password = \u012eveskite kambario slapta\u017eod\u012f.
+message.enter.room.password = \u012eveskite kambario slapta\u017eod\u012f
 message.enter.simple = \u017demiau \u012fveskite \u201eSIMPLE\u201c tinklo abonento vard\u0105 ir slapta\u017eod\u012f.
 message.enter.valid.jid = \u012eveskite teising\u0105 \u201eJabber\u201c tinklo identifikatori\u0173 (JID)
 message.enter.xmpp = \u017demiau \u012fveskite \u201eXMPP\u201c tinklo abonento vard\u0105 ir slapta\u017eod\u012f.
 message.enter.yahoo = \u012eveskite \u201eYAHOO\u201c tinklo abonento vard\u0105 ir slapta\u017eod\u012f.
 message.error.during.file.transfer = D\u0117l siuntimo klaidos bylos i\u0161si\u0173sti nepavyko.
+message.error.must.use.reserved.nick = Turite naudoti pseudonim\u0105 rezervuot\u0105 \u0161iam kambariui.
+message.error.nickname.in.use = Pasirinktas pseudonimas jau yra panaudotas arba rezervuotas kito vartotojo.
+message.error.no.permission.create.room = Neturite leidimo sukurti kambar\u012F.
+message.error.no.response = N\u0117ra atsakymo i\u0161 serverio.
+message.error.not.member = J\u016Bs nesate \u0161io kambario narys. \nTam, kad prisijungti prie \u0161io kambario, reikia b\u016Bti jo nariu.
+message.error.room.not.exist = Kambarys \u012F kur\u012F bandote \u012Feiti neegzistuoja.
+message.error.room.password.incorrect = Slapta\u017Eodis nesutapo su kambario slapta\u017Eod\u017Eiu.
+message.error.unable.join.room = Nei\u0161eina prisijungti prie kambario.
 message.file.exists.question = Byla jau egzistuoja. Ar perra\u0161yti i\u0161 naujo?
 message.file.size = Bylos dydis: {0}
 message.file.transfer.canceled = At\u0161auktas bylos siuntimas.
