--- a/src/resources/i18n/spark_i18n.properties
+++ b/src/resources/i18n/spark_i18n.properties
@@ -475,6 +475,7 @@ label.received = Received
 label.rename.to = Rename to
 label.resource = Resource
 label.response.timeout = &Response timeout (sec)
+label.reconnect.delay = Reconnection Delay (sec)
 label.room = Room
 label.room.name = Room name
 label.room.topic = Room topic
