SPARK-1877 add LT translation

--- a/src/resources/i18n/spark_i18n_lt.properties
+++ b/src/resources/i18n/spark_i18n_lt.properties
@@ -434,6 +434,7 @@ label.received = &Gautas
 label.rename.to = Pervardyti \u012f
 label.resource = &Resursas
 label.response.timeout = R&eakcijos laikas (sek.)
+label.reconnect.delay = Pakartoninio prisijungimo atid\u0117jimas (sek.)
 label.room = &Kambarys
 label.room.name = &Kambario vardas
 label.room.topic = Kambario pokalbio tema
